Fri Jan 30 16:12:32 2009  TAKAO Kouji  <kouji@takao7.net>

	* ext/curses/curses.c (Init_curses): Curses#crmode and
	  Curses#nocrmode changes to the module function. 
	  fix #916
	
Fri Jan 30 14:31:14 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/make-snapshot (prereq): remove enc.mk from tarball because
	  BSD make checks $(srcdir)/enc.mk and try to run $(builddir)/enc.mk.

Fri Jan 30 14:11:48 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* enc/depend: extract comile rules to each target for VC++.

Fri Jan 30 12:59:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (RUBYDEF): depends on makefiles.

	* cygwin/GNUmakefile.in (RUBYDEF): adds DATA to non-function symbols
	  which is not marked as T.

Fri Jan 30 11:03:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (assert_respond_to): gets rid of
	  overcounting.   [ruby-dev:37703]

Fri Jan 30 02:55:56 2009  Tanaka Akira  <akr@fsij.org>

	* transcode.c (rb_econv_init_by_convpath_i): make it static.

Thu Jan 29 16:22:41 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* load.c (rb_feature_provided): should not calculate len by pointer
	  subtraction because feature may be a expanded path.
	  [ruby-core:21267]

Thu Jan 29 14:12:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (BASERUBY): erases RUBYOPT at the test.

	* configure.in (OBJCOPY): not used on Windows.

Thu Jan 29 13:16:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/securerandom.rb (SecureRandom.uuid): uses unpacked array
	  instead of string, because String#[] returns one length string.

Thu Jan 29 12:29:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rake.rb (FileUtils#rake_system): no longer needs workaround
	  on Windows.  [ruby-core:21339]

	* lib/rake/win32.rb (Rake::Win32#rake_system): ditto.

	* lib/rake/win32.rb (Rake::Win32#win32_system_dir): no longer
	  needs environment variables other than APPDATA now.
